Made all strength day images clickable buttons so we can add audio to them

--- a/app/src/main/res/layout/fragment_strength_day_five.xml
+++ b/app/src/main/res/layout/fragment_strength_day_five.xml
@@ -35,13 +35,14 @@
             android:textSize="32dp"
             android:layout_gravity="center_horizontal"/>
 
-        <ImageView
+        <ImageButton
             android:scaleType="fitXY"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/imageView"
             android:src="@drawable/bench"
             android:layout_below="@+id/bench"
+            android:clickable="true"
             android:layout_gravity="center_horizontal"/>
 
         <TextView
@@ -54,13 +55,14 @@
             android:layout_below="@+id/imageView"
             android:layout_gravity="center_horizontal"/>
 
-        <ImageView
+        <ImageButton
             android:scaleType="fitXY"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/legpresspic"
             android:src="@drawable/squat"
             android:layout_below="@+id/squat"
+            android:clickable="true"
             android:layout_gravity="center_horizontal"/>
 
         <TextView
@@ -72,13 +74,15 @@
             android:textSize="32dp"
             android:layout_below="@+id/legpresspic"
             android:layout_gravity="center_horizontal"/>
-        <ImageView
+
+        <ImageButton
             android:scaleType="fitXY"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/ohppic"
             android:src="@drawable/militarypress"
             android:layout_below="@+id/ohp"
+            android:clickable="true"
             android:layout_gravity="center_horizontal"/>
 
         <Button
@@ -90,12 +94,6 @@
             android:layout_below="@+id/calfpresspic"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true" />
-
-
-
-
-
-
 
 
     </LinearLayout>>
