--- a/app/src/main/res/layout/fragment_weightloss_day_one.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day_one.xml
@@ -33,15 +33,15 @@
             android:textColor="#ffffff"
             android:textSize="32dp" />
 
-        <ImageView
+        <ImageButton
             android:scaleType="fitXY"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/runningImage"
             android:src="@drawable/running"
             android:layout_gravity="center_horizontal"
-            android:layout_below="@+id/warmupRunText"
-            />
+            android:clickable="true"
+            android:layout_below="@+id/warmupRunText" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -62,16 +62,16 @@
             android:textSize="32dp"
             android:id="@+id/walkingLungesText" />
 
-        <ImageView
+        <ImageButton
             android:scaleType="fitXY"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/lungesImage"
             android:layout_gravity="center_horizontal"
             android:layout_below="@+id/walkingLungesText"
-            android:src="@drawable/lunges"
+            android:clickable="true"
+            android:src="@drawable/lunges" />
 
-             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -89,18 +89,17 @@
             android:layout_gravity="center_horizontal"
             android:layout_below="@+id/lungesDetail"
             android:textColor="#ffffff"
-            android:textSize="32dp"
-            />
+            android:textSize="32dp" />
 
-        <ImageView
+        <ImageButton
             android:scaleType="fitXY"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/jumpRopeImage"
             android:layout_gravity="center_horizontal"
             android:layout_below="@+id/jumpropeText"
-            android:src="@drawable/jump_rope"
-            />
+            android:clickable="true"
+            android:src="@drawable/jump_rope" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -109,7 +108,6 @@
             android:id="@+id/jumpropeDetail"
             android:layout_gravity="center_horizontal"
             android:layout_below="@+id/jumpRopeImage"
-
             android:textColor="#ffffff" />
 
         <Button
